--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Allura&family=Inter:wght@100&family=Montserrat&family=Oswald:wght@311&family=Poppins:wght@200;300;400;500&family=Raleway:wght@300;400;500&display=swap');
+
 .cabecalho{
     background-color: var(--cor-fundo);
     box-sizing: border-box;
@@ -9,8 +11,21 @@
     z-index: 9999;
 }
 
+.cabecalho__container{
+    align-items: center;
+    display: flex;
+    gap: .7rem;
+}
+
 .cabecalho__img{
     width:5rem;
+}
+
+.cabecalho__nome{
+    font-family: 'Allura', cursive;
+    font-size: 45px;
+    font-weight: 500;
+    color: var(--cor-titulo);
 }
 
 #cabecalho__navegacao{
@@ -42,6 +57,7 @@ button{
     padding: .7rem;
     transition: all .2s ease-in-out;
     text-decoration: none;
+    font-size: 19px;
 }
 
 .menu__lista:hover{
@@ -50,16 +66,17 @@ button{
 }
 
 .menu__link{
-    color: var(--cor-texto);
+    color: var(--cor-texto-botoes);
     text-decoration: none;
 }
 
 .menu__botao{
     display: flex;
+    color: var(--cor-texto-botoes);
     background-color: transparent;
     border: none;
     align-items: center;
-    font-size: 18px;
+    font-size: 19px;
     font-family: var(--fonte);
     font-weight: 500;
     padding: 0;
