--- a/assets/css/sabores.css
+++ b/assets/css/sabores.css
@@ -62,9 +62,9 @@
 }
 
 .container__titulo{
-    color: #f2f2f2;
-    font-weight: 600;
-    font-size: 25px;
+    color: #e9e9e9;
+    font-weight: 500;
+    font-size: 30px;
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
