n sei pq ainda está bugando

--- a/assets/css/variaveis.css
+++ b/assets/css/variaveis.css
@@ -1,6 +1,6 @@
 :root{
     --cor-borda:#A67926;
-    --cor-fundo:#fae8c7;
+    --cor-fundo:#FCF0D9;
     --cor-texto:#131313;
     --cor-titulo:#8C6535;
     --cor-texto-botoes:#69471d;
