--- a/assets/css/sabores.css
+++ b/assets/css/sabores.css
@@ -99,7 +99,12 @@
 
 .splide__slide{
     height: 350px;
-    padding: 0 1rem;
+    padding: 0 .5rem;
+    opacity: 0.7;
+}
+
+.splide__slide.is-active{
+    opacity: 1;
 }
 
 @media screen and (max-width:1219px) {
@@ -115,12 +120,10 @@
 @media screen and (min-width:1220px) {
     .sabores{
         align-items: center;
-        flex-direction: row;
-        gap: 3rem;
+        gap: 1rem;
         justify-content: space-around;
-        max-width: 1300px;
     }
     #image-carousel{
-        width: 1000px;
+        width: 1150px;
     }
 }
