--- a/assets/css/corpo.css
+++ b/assets/css/corpo.css
@@ -4,5 +4,6 @@ body{
     position: relative;
     font-family: var(--fonte);
     font-size: 18px;
-    background-color: #fcfcfc;
+    background-color: #fff7e8;
+    min-height: 100vh;
 }
