--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -5,7 +5,6 @@ footer{
     display: flex;
     font-size: 18px;
     font-weight: 500;
-    flex-direction: column;
     justify-content: center;
     height: 200px;
     padding: 0 1.7rem;
@@ -15,4 +14,23 @@ footer{
 
 footer img{
     width:64px;
+}
+
+.footer__conteudo{
+    display: flex;
+    flex-direction:column ;
+    gap: .7rem;
+    align-items: center;
+}
+
+.footer__telefone,.footer__telefone a {
+    color: var(--cor-texto);
+}
+
+@media screen and (min-width:1220px) {
+    footer{
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+    }
 }
