--- a/assets/css/sabores.css
+++ b/assets/css/sabores.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: column;
     margin: 0 auto;
+    background-color: var(--cor-titulo);
+    padding-bottom: 1rem;
 }
 
 .splide{
@@ -9,7 +11,7 @@
 }
 
 .sabores__titulo{
-    color: var(--cor-titulo);
+    color: var(--cor-fundo);
     text-align: center;
     font-family: var(--fonte-h1);
     font-size: 3.5rem;
@@ -22,7 +24,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 2rem 0;
+    padding: 2.5rem 0;
     width: 100%;
     height: auto;
 }
@@ -61,7 +63,7 @@
 }
 
 .container__titulo{
-    color: #f0f0f0;
+    color: var(--cor-fundo);
     font-weight: 500;
     font-size: 30px;
     position: absolute;
@@ -100,7 +102,7 @@
 .splide__slide{
     height: 350px;
     padding: 0 .5rem;
-    opacity: 0.7;
+    opacity: 0.8;
 }
 
 .splide__slide.is-active{
