--- a/assets/css/variaveis.css
+++ b/assets/css/variaveis.css
@@ -6,7 +6,7 @@
     --cor-borda:#A67926;
     --cor-fundo:#FCF0D9;
     --cor-texto:#131313;
-    --cor-titulo:#8D6630;
+    --cor-titulo:#a37d47;
     --cor-texto-botoes:#694B26;
     --fonte: 'Poppins', sans-serif;
     --fonte-titulo:'Allura', cursive;
