--- a/assets/css/corpo.css
+++ b/assets/css/corpo.css
@@ -4,6 +4,6 @@ body{
     position: relative;
     font-family: var(--fonte);
     font-size: 18px;
-    background-color: #fff7e8;
+    background-color: var(--cor-fundo);
     min-height: 100vh;
 }
