--- a/assets/css/categorias.css
+++ b/assets/css/categorias.css
@@ -5,7 +5,7 @@
     justify-content: center;
     background-color:var(--cor-titulo);
     padding: 1rem 0;
-    
+    width: 100vw;
 }
 
 .categorias__titulo{
