--- a/assets/css/produtos.css
+++ b/assets/css/produtos.css
@@ -8,7 +8,7 @@
 
 .produtos__container{
     display: grid;
-    grid-template-columns: 175px 175px;
+    grid-template-columns: 180px 180px;
     gap: .7rem;
 }
 
@@ -27,6 +27,10 @@
     justify-content: center;
 
     text-decoration: none;
+}
+
+.item__figure{
+    margin-top: 2.5rem;
 }
 
 
@@ -53,20 +57,19 @@
 }
 
 .item__botao{
-    background-color: var(--cor-fundo);
+    background-color: var(--cor-texto-botoes);
+    color: #f3f3f3;
     border-radius: 10px;
-    color: var(--cor-texto);
     font-family: var(--fonte);
-    font-size: 17px;
+    font-size: 16px;
     font-weight: 500;
-    padding: .6rem;
+    padding: .4rem;
     transition: .3s;
 }
 
 .item__botao:hover{
-    background-color: var(--cor-texto-botoes);
-    color: #f3f3f3;
-    outline: 2px solid var(--cor-fundo);
+    background-color: var(--cor-fundo);
+    color: var(--cor-texto);
 }
 
 @media screen and (min-width:768px) {
@@ -86,8 +89,7 @@
 
     .item__botao{
         width: 150px;
-        position: absolute;
-        bottom: 6px;
+
     }
 }
 
