--- a/assets/css/banner.css
+++ b/assets/css/banner.css
@@ -9,9 +9,10 @@
 .banner__imagem{
     width: 100vw;
     height: 350px;
-    object-fit: cover;
+    object-fit:cover;
     opacity: 0;
     transition: .7s;
+    
 }
 
 .banner__conteudo{
@@ -50,5 +51,10 @@
 
     .banner__descricao{
         font-size: 33px;
+    }
+
+    .banner__imagem{
+        height: 500px;
+        vertical-align: middle;
     }
 }
