--- a/assets/css/item.css
+++ b/assets/css/item.css
@@ -1,4 +1,4 @@
-.container{
+.item__container{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -91,7 +91,7 @@
 }
 
 @media screen and (min-width:1220px) {
-    .container{
+    .item__container{
         flex-direction: row;
         padding: 2rem;
         margin: 0 10rem;
