--- a/assets/css/categorias.css
+++ b/assets/css/categorias.css
@@ -5,7 +5,7 @@
     justify-content: center;
     background-color:var(--cor-titulo);
     padding: 1rem 0;
-    width: 100vw;
+    width: 100%;
     margin-bottom: 1rem;
 }
 
@@ -37,6 +37,8 @@
 
 .categorias__botao:hover{
     background-color:var(--cor-texto-botoes);
+    -webkit-box-shadow: 2px 3px 15px  -7px var(--cor-fundo);
+    -moz-box-shadow: 2px 3px 15px  -7px var(--cor-fundo);
     box-shadow: 2px 3px 15px  -7px var(--cor-fundo);
     color: #fefefe;
     cursor: pointer;
