--- a/assets/css/corpo.css
+++ b/assets/css/corpo.css
@@ -13,7 +13,7 @@ body::-webkit-scrollbar{
 }
 
 body::-webkit-scrollbar-track{
-    background-color: var(--cor-fundo);
+    background-color: transparent;
 }
 
 body::-webkit-scrollbar-thumb{
