--- a/assets/css/animacoes.css
+++ b/assets/css/animacoes.css
@@ -1,3 +1,7 @@
+[data-animacao]{
+    opacity: 0;
+}
+
 [data-animacao].animacao{
     transform: translate3d(0,0,0);
     opacity: 1;
@@ -10,4 +14,8 @@
 
 [data-animacao = "left"]{
     transform: translate3d(-50px,0,0);
+}
+
+[data-animacao = "right"]{
+    transform: translate3d(50px,0,0);
 }
