--- a/assets/css/banner.css
+++ b/assets/css/banner.css
@@ -20,17 +20,17 @@
     flex-direction: column;
     gap: .5rem;
     position:absolute;
-    color: #a87329;
+    color: #dd9023;
     font-family: var(--fonte);
     opacity: 0;
     transition: 1s;
-    text-shadow: 0 -2px 0 #c77f1a;
+    text-shadow: 1px -1px 0 #a87329;
 }
 
 .banner__titulo{
     font-size: 32px;
     font-weight: 500;
-
+    text-align: center;
 }
 
 .banner__descricao{
