--- a/assets/css/corpo.css
+++ b/assets/css/corpo.css
@@ -17,7 +17,7 @@ body::-webkit-scrollbar-track{
 }
 
 body::-webkit-scrollbar-thumb{
-    background-color: rgb(146, 101, 18);
+    background-color: rgba(146, 101, 18, 0.664);
     border: 3px solid var(--cor-fundo);
     border-radius: 20px;
 }
