--- a/assets/css/loja.css
+++ b/assets/css/loja.css
@@ -1,3 +1,101 @@
-.loja__banner{
+.introducao{
+    padding: .5rem .7rem;
+}
+
+.introducao__container{
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+    align-items: center;
+    margin-top: .7rem;
+}
+
+.container__texto{
+    display: flex;
+    flex-direction:column;
+    gap: .5rem;
+    transition: 1s;
+}
+
+.texto:first-child::first-letter{
+    font-size: 25px;
+    font-weight: bold;
+    color: rgb(32, 32, 32);
+    letter-spacing: 3px;
+}
+
+.texto{
+    font-family: var(--fonte);
+    line-height: 22px;
+    letter-spacing: 1.5px;
+    color: var(--cor-texto);
+}
+
+.container__imagem{
+    max-width: calc(100vw - 1.4rem);
+    transition: 1s;
+}
+
+.mapa{
+    align-items: center;
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: .5rem;
+}
+
+.mapa__titulo{
+    color: #c2810a;
+    font-size: 25px;
+    font-weight: 500;
+    font-family: var(--fonte);
+    padding: .5rem 1rem;
+    text-align: center;
+    transition: 1s;
+}
+
+.mapa__iframe{
+    width: 100%;
+    height: 40vh;
+}
+
+@media screen and (min-width:768px) {
+    .introducao{
+        padding: .7rem 1rem;
+    }
+
+    .introducao__container{
+        flex-direction: row-reverse;
+        align-items: center;
+        gap: 1rem;
+    }
+
+    .mapa__titulo{
+        font-size: 27px;
+    }
+
+    .container__imagem{
+        height: 100%;
+        max-width: calc(50vw - 1rem);
+    }
     
+    .mapa__iframe{
+        width: calc(100% - 4rem);
+        height: 50vh;
+    }
+}
+
+@media screen and (min-width:1220px) {
+    .introducao{
+        padding: 1rem 3rem;
+    }
+
+    .mapa__titulo{
+        font-size: 30px;
+    }
+
+    .mapa__iframe{
+        width: calc(100% - 6rem);
+    }
 }
