--- a/assets/css/produtos.css
+++ b/assets/css/produtos.css
@@ -62,21 +62,26 @@
 }
 
 .item__botao{
-    background-color: var(--cor-texto-botoes);
+    background-image: linear-gradient(#694B26, #694B26);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-position-x: left;
     color: #f3f3f3;
     border-radius: 10px;
     font-family: var(--fonte);
     font-size: 16px;
     font-weight: 500;
     padding: .4rem;
-    transition: .3s;
+    transition: .6s;
+    outline: 2px solid transparent;
 }
 
 .item__botao:hover{
     background-color: var(--cor-fundo);
-    box-shadow: 0 0 0 2px  var(--cor-texto-botoes);
+    outline-color:var(--cor-texto-botoes);
     color: var(--cor-texto);
-
+    background-size: 0% 100%;
+    border: none;
 }
 
 @media screen and (min-width:768px) {
@@ -96,7 +101,6 @@
 
     .item__botao{
         width: 150px;
-
     }
 }
 
