--- a/assets/css/item.css
+++ b/assets/css/item.css
@@ -31,6 +31,7 @@
 }
 
 .conteudo__imagem{
+    aspect-ratio: 1;
     border-radius: 5px;
     width: 100%;
     height:350px;
@@ -99,7 +100,7 @@
 
     .conteudo__imagem{
         width: 60%;
-        height: 550px;
+        height: 500px;
     }
 
     .container__conteudo{
